unoptimised Kimura distribution functions and parameter estimation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,16 @@
 Package: kimura
-Title: What the Package Does (One Line, Title Case)
+Title: Fitting Kimura Distirbutions to Heteroplasmy Data
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Lyuba", "Bozhilova", , "lyubabozhilova@gmail.com", 
+           role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0003-2784-2040"))
+Description: The Kimura distribution can be used to test whether a heteroplasmy
+    distribution is consistent with random genetic drift, or whether a selection
+    effect is likely observed.
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Imports: 
+    stats
