--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,11 @@
 
 export(.f0)
 export(.f1)
-export(.get_ks_stat)
 export(.hypgeo)
 export(.phi)
-export(.sample_h)
+export(.pkimura_full)
 export(dkimura)
 export(estimate_parameters)
-export(fit_kimura)
 export(pkimura)
-export(pkimura_full)
 export(rkimura)
 export(test_kimura)
