add normalised variance and normalised heteroplasmy shift

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(.phi)
 export(.pkimura_full)
 export(dkimura)
 export(estimate_parameters)
+export(nvar)
 export(pkimura)
 export(rkimura)
+export(shift)
 export(test_kimura)
